syntax = "proto2";

message p2p_IpcMessage {
	enum Status {
	TEST = 0;
	OK = 1;
	ERROR = 2;
	FINISH = 3;
	WAIT = 4;
	BLOCK = 5;
	PING = 6;
	PONG = 7;
	ASK_IF_BLOCK_READY = 8;
	BLOCK_READY = 9;
	BLOCK_NOT_READY = 10;
	}
	required string date = 1;
	optional uint64 timestamp_begin = 2;
	optional uint64 timestamp_end = 3;
	optional uint64 difficulty = 4;
	optional bytes merkle_root = 5;
	optional bytes nonce = 6;
	optional bytes prev_block = 7;
	required Status status_code = 8;
}
