syntax = "proto2";

message Transaction {
	required bytes transaction = 1;
	required bytes pubkey = 2;
	required string date = 3;
}

message IpcMessage {
	enum Status {
	TEST = 0;
	OK = 1;
	ERROR = 2;
	FINISH = 3;
	WAIT = 4;
	}
	required Status status_code = 1;
	required Transaction data = 2;
}
